# StocksX_V0

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  3YEAR_BACKTEST_PLAN.md  3YEAR_BACKTEST_REPORT.md  3year_backtest_detailed.json  3year_backtest_results.csv  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_UPDATE.md  AUDIT_REPORT.md  AUTO_TRADING_IMPLEMENTATION.md  BINANCE_WEBSOCKET_GUIDE.md  CHANGELOG.md  COMPLETE_ARCHITECTURE_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.streamlit  IMPLEMENTATION_SUMMARY.md  ISSUES.md  LICENSE  MONTE_CARLO_REPORT.md  Makefile  OPTIMIZATION_COMPLETE.md  PHASE3_COMPLETE_SUMMARY.md  PHASE3_PROGRESS.md  PHASE4_COMPLETE_REPORT.md  PHASE4_EXPANSION_PLAN.md  PHASE4_PROGRESS_60pct.md  PREMIUM_FEATURES.md  PROFESSIONAL_FEATURES.md  PROGRESS_REPORT_2026-03-19.md  PROMPT_REMAINING_WORK.md  README.md  README_AUTO_TRADING.md  REFACTOR_HANDOFF.md  SECURITY.md  (+41 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
V1_ARCHITECTURE/: .env.example  DEPLOYMENT.md  README.md  docker-compose.yml
V1_ARCHITECTURE/backend/: Dockerfile  __init__.py  requirements.txt
V1_ARCHITECTURE/frontend/: Dockerfile  index.html  nginx.conf  package.json
backend/: README.md  database.py  main.py  models.py  requirements.txt  schemas.py
backend/api/: portfolio.py  scores.py  strategies.py
backtest_reports/: latest_backtest.md  weekly_backtest_2026-03-24_1110.json
docs/: 100_PERCENT_COMPLETE.md  130_STRATEGIES_100_PERCENT_COMPLETE.md  1panel_deploy.md  ARCHITECTURE_FRONTEND_BACKEND.md  AUTOMATED_TRADING_MONITORING.md  AUTO_TRADING_GUIDE.md  BATCH1_BACKTEST_REPORT.md  BATCH_COMPLETION_2026-03-21.md  BINANCE_WEBSOCKET_CONFIG.md  COMPACT_DASHBOARD_DESIGN.md  DEPLOYMENT_COMPLETE.md  DEPLOY_1PANEL.md  DEV_PLAN.md  FEATURE_CHECKLIST.md  FEATURE_UPGRADE_SUMMARY.md  FINAL_COMPLETION_REPORT.md  FINAL_ENHANCEMENT_2026-03-21.md  FINAL_SUMMARY_2026-03-22.md  GITHUB_ISSUES_COMPLETION.md  ISSUES_OPTIMIZATION_REPORT.md  NEWS_INTEGRATION_GUIDE.md  NEW_FEATURES_2026-03-22.md  PERFORMANCE_BENCHMARK_2026-03-22.md  PERFORMANCE_OPTIMIZATION.md  PROGRESS_FINAL_2026-03-22.md  PROGRESS_REPORT.md  PROGRESS_SUMMARY_2026-03-21.md  PROJECT_COMPLETION_REPORT.md  PUSH_SUCCESS.md  PUSH_TO_GITHUB.md  QUICK_START.md  REAL_DATA_INTEGRATION.md  STRATEGY_UPDATE_2026-03-21.md  UI_MODERN_GUIDE.md  VALIDATION_REPORT_2026-03-22.md  ai_microstructure_optimization_report.md  bollinger_squeeze_optimization_report.md  fibonacci_optimization_report.md  ichimoku_optimization_report.md  kelly_optimization_report.md  (+9 more)
docs/analytics/: strategy_heatmap.html  strategy_scores.csv  strategy_scores.html  strategy_signal_statistics.csv
examples/: fetch_btc_example.py
frontend/: index.html  package.json
monitoring/: alerts.yml  grafana_dashboard.json  metrics_exporter.py  performance_monitor.py  prometheus.yml
pages/: 10_📊_策略回测对比.py  11_📊_数据源管理.py  11_🤖_自動交易.py  12_⚙️_订单管理.py  13_📈_组合优化.py  1_login.py  1_🔐_登入.py  2_backtest.py  2_₿_加密回測.py  2_🏛️_傳統回測.py  2_📊_回測.py  3_history.py  3_📜_歷史.py  4_admin.py  4_🛠️_管理.py  5_📡_交易監控.py  5_📡_交易監控_v5.py  5_📡_交易監控_v6_compact.py  5_📡_監控.py  5_📡_監控_backup.py  6_📰_新聞.py  7_🏥_健康檢查.py  8_⚡_即時監控.py  9_🤖_自動交易.py  9_🧠_AI 策略.py
pipeline/: automated_backtest_pipeline.py
portfolio/: portfolio_optimizer.py
scripts/: batch_strategy_generator.py  benchmark_130_strategies.py  close_issues.py  close_issues.sh  github_close_issues.py  validate_all_strategies.py  weekly_backtest.py
src/: __init__.py  __main__.py  chart_theme.py  compat.py  config.py  config_secrets.py  py.typed  ui_backtest.py  ui_backtest_detail.py  ui_common.py  ui_enhanced.py  ui_helpers.py  ui_history_enhanced.py  ui_modern.py  ui_strategy_params.py  version.py  websocket_binance.py  websocket_server.py
src/ai/: __init__.py  qwen_client.py
src/analytics/: portfolio_backtest.py  strategy_heatmap.py  strategy_scorer.py
src/auth/: __init__.py  user_db.py
src/backtest/: __init__.py  advanced_strategies.py  engine.py  engine_vec.py  fees.py  indicators.py  optimizer.py  position_sizing.py  strategies.py  strategies_vectorized.py  walk_forward.py
src/core/: __init__.py  adapters.py  alerts.py  backtest.py  cache_manager.py  config.py  container.py  middleware.py  orchestrator.py  pipeline.py  provider.py  registry.py  repository.py  signals.py  strategies_bridge.py  tasks.py  walk_forward.py
src/data/: __init__.py  async_fetcher.py  indices.py  integrity.py  live.py  live_monitor.py  market_overview.py  models.py  news_aggregator.py  service.py  validators.py
src/notify/: bark.py
src/static/: __init__.py  css.py
src/strategies/: README_STRATEGIES.md  __init__.py  advanced_strategies.py  base_strategy.py  regime_detection.py  strategy_factory.py
src/tasks/: __init__.py  backtest_tasks.py  celery_app.py
src/trading/: __init__.py  auto_trader.py  circuit_breaker.py  executor.py  risk_manager.py  (+1 more)
temp/: BATCH1_COMPLETION_REPORT.md  OPT007_COMPLETION_REPORT.md  TASK_COMPLETION_REPORT.md  auto_completion_plan.md  strategy-implementation-plan.md
tests/: conftest.py  test_architecture.py  test_auto_trading.py  test_basic.py
trading/: README.md  requirements.txt  trading_engine.py
ultra_backtest_results/: ULTRA_SCALE_REPORT.md  intermediate_multi_factor.json  intermediate_optimization.json  ultra_stats.csv
(+151 files in other folders)
